# stonks

./: .gitignore  Cargo.toml  README.md  logs.sh
src/: app.rs  asset.rs  main.rs  search_page.rs  ui.rs  util.rs
