[package]
name = "stonks"
version = "0.1.0"
authors = ["Sam Bentley <samtbentley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17"
tui = { version = "0.9.5", default-features = false, features = ['crossterm'] }
unicode-width = "0.1"