[package]
name = "stonks"
version = "0.1.0"
authors = ["Sam Bentley <samtbentley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.0"
log = "0.4.11"
fern = "0.6.0"
chrono = "0.4"
config = "0.10.1"
serde_json = "1.0"
crossterm = "0.17"
simsearch = "0.2.1"
native-tls = "0.2.4"
num-format = "0.4.0"
unicode-width = "0.1"
tungstenite = "0.11.0"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
tui = { version = "0.9.5", default-features = false, features = ['crossterm'] }